Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,33 @@
     ]
   },
   {
+    "title": "Cô gái 21 tuổi mắc hàng loạt 'bệnh người già'",
+    "content": "Cô gái 21 tuổi quê Nam Định đã mắc phải những bệnh lý nghiêm trọng thường gặp ở người lớn tuổi như tăng huyết áp, đái tháo đường, và suy thận giai đoạn cuối. Trong 6 tháng qua, cô đã giảm 20 kg và thường xuyên cảm thấy mệt mỏi, nhưng không đi khám bệnh cho đến khi tình trạng trở nên nghiêm trọng. Các bác sĩ khuyến cáo rằng việc khám sức khỏe định kỳ là rất quan trọng để phát hiện sớm các bệnh lý nguy hiểm.",
+    "link": "https://vnexpress.net/co-gai-21-tuoi-mac-hang-loat-benh-nguoi-gia-4859200.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Cô gái 21 tuổi mắc những bệnh gì?",
+    "answers": [
+      {
+        "text": "Tăng huyết áp, đái tháo đường, bệnh thận",
+        "correct": true
+      },
+      {
+        "text": "Cảm cúm, viêm phổi, đau dạ dày",
+        "correct": false
+      },
+      {
+        "text": "Dị ứng, đau đầu, viêm xoang",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường, viêm gan, loãng xương",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 ôtô bán ít nhất thị trường Việt Nam tháng 2",
     "content": "Báo cáo doanh số ô tô tháng 2/2025 cho thấy Toyota Land Cruiser và Honda Accord là hai mẫu xe bán ít nhất tại thị trường Việt Nam, với chỉ 2 xe được bàn giao cho mỗi mẫu. Sự sụt giảm doanh số so với tháng trước rất rõ ràng, khi Land Cruiser đã bán 17 xe trong tháng 1 và Accord bán 5 xe. Ngoài hai mẫu xe này, Kia K5, Mitsubishi Pajero Sport, và Isuzu mu-X cũng nằm trong danh sách những xe có doanh số thấp trong tháng 2.",
     "link": "https://vnexpress.net/oto-xe-may/v-car/doanh-so/10-oto-ban-it-nhat-thi-truong-viet-nam-thang-2-4858749.html",
@@ -371,6 +398,33 @@
     ]
   },
   {
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "answers": [
+      {
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -420,33 +474,6 @@
       },
       {
         "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
-    "answers": [
-      {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -3127,33 +3154,6 @@
     ]
   },
   {
-    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
-    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
-    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
-    "answers": [
-      {
-        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
-        "correct": false
-      },
-      {
-        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống sữa có làm tăng cholesterol?",
     "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
     "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
@@ -3203,6 +3203,33 @@
       },
       {
         "text": "Bệnh glôcôm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
+    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
+    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
+    "answers": [
+      {
+        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
+        "correct": false
+      },
+      {
+        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
         "correct": false
       }
     ]
@@ -3428,37 +3455,6 @@
     ]
   },
   {
-    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
-    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
-    "answers": [
-      {
-        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã học tiếng Anh từ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
     "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
@@ -3485,6 +3481,37 @@
       },
       {
         "text": "12 xe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
+    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
+    "answers": [
+      {
+        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã học tiếng Anh từ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
         "correct": false
       }
     ]
@@ -4270,6 +4297,33 @@
     ]
   },
   {
+    "title": "Bé gái nguy kịch do biến chứng sởi",
+    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
+    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái nguy kịch do biến chứng nào?",
+    "answers": [
+      {
+        "text": "Sởi",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Thủy đậu",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng nghìn ôtô điện VinFast sắp đến Indonesia",
     "content": "VinFast đã xuất khẩu gần 2.500 chiếc ôtô điện đến Indonesia, bao gồm các mẫu VF 3, VF 5, VF e34 và Nerio Green, trên tàu Silver Queen. Lô hàng này sẽ được bàn giao cho người tiêu dùng trước lễ Lebaran của người Hồi giáo. VinFast đánh giá Indonesia là thị trường trọng điểm với tốc độ tăng trưởng cao và đã có kế hoạch mở rộng sản xuất, nhằm cung cấp các dịch vụ và sản phẩm tốt nhất cho khách hàng tại đây.",
     "link": "https://vnexpress.net/hang-nghin-oto-dien-vinfast-sap-den-indonesia-4858752.html",
@@ -4296,33 +4350,6 @@
       },
       {
         "text": "Singapore",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bé gái nguy kịch do biến chứng sởi",
-    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
-    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái nguy kịch do biến chứng nào?",
-    "answers": [
-      {
-        "text": "Sởi",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Thủy đậu",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
         "correct": false
       }
     ]
@@ -4663,33 +4690,6 @@
       },
       {
         "text": "Vì họ không có đủ cầu thủ tấn công.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhiều trẻ đến trường như cuộc chạy trốn gia đình",
-    "content": "Bài viết đề cập đến việc nhiều trẻ em đến trường với tâm lý chán nản, coi đây như một cuộc chạy trốn khỏi gia đình. Theo chuyên gia Hoàng Anh Tú, nguyên nhân do áp lực từ thành tích học tập và sự kỳ vọng của phụ huynh. Ông Tú nhấn mạnh tầm quan trọng của việc đồng hành cùng con trong quá trình học tập, khuyến khích phụ huynh hỗ trợ trẻ mà không tạo áp lực quá lớn.",
-    "link": "https://dantri.com.vn/giao-duc/nhieu-tre-den-truong-nhu-cuoc-chay-tron-gia-dinh-20250309162718982.htm",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao nhiều trẻ em đến trường cảm thấy chán nản?",
-    "answers": [
-      {
-        "text": "Do áp lực từ thành tích học tập và sự kỳ vọng của phụ huynh.",
-        "correct": true
-      },
-      {
-        "text": "Vì trường học không hấp dẫn.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì trẻ không có bạn bè.",
-        "correct": false
-      },
-      {
-        "text": "Do không thích môn học ở trường.",
         "correct": false
       }
     ]
