--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -166,6 +166,33 @@
     ]
   },
   {
+    "title": "Nhiều đại học top đầu xét tuyển tổ hợp mới có môn tin",
+    "content": "Nhiều trường đại học hàng đầu ở Việt Nam đã công bố tổ hợp xét tuyển mới cho năm 2025, trong đó có môn tin học. Các trường như Đại học Kiến trúc Hà Nội, Đại học Giao thông Vận tải và Đại học Bách khoa Hà Nội đã bổ sung môn tin học vào nhiều tổ hợp xét tuyển khác nhau. Việc này nhằm tạo điều kiện cho thí sinh có thêm lựa chọn và tăng cơ hội trúng tuyển vào các ngành học liên quan đến công nghệ thông tin và kỹ thuật.",
+    "link": "https://dantri.com.vn/giao-duc/nhieu-dai-hoc-top-dau-xet-tuyen-to-hop-moi-co-mon-tin-20250310161115061.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Năm 2025, có những trường đại học nào xét tuyển tổ hợp mới có môn tin học?",
+    "answers": [
+      {
+        "text": "Đại học Kiến trúc Hà Nội",
+        "correct": true
+      },
+      {
+        "text": "Đại học Y Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "Đại học Kinh tế Quốc dân",
+        "correct": false
+      },
+      {
+        "text": "Đại học Sư phạm Hà Nội",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 ôtô bán ít nhất thị trường Việt Nam tháng 2",
     "content": "Báo cáo doanh số ô tô tháng 2/2025 cho thấy Toyota Land Cruiser và Honda Accord là hai mẫu xe bán ít nhất tại thị trường Việt Nam, với chỉ 2 xe được bàn giao cho mỗi mẫu. Sự sụt giảm doanh số so với tháng trước rất rõ ràng, khi Land Cruiser đã bán 17 xe trong tháng 1 và Accord bán 5 xe. Ngoài hai mẫu xe này, Kia K5, Mitsubishi Pajero Sport, và Isuzu mu-X cũng nằm trong danh sách những xe có doanh số thấp trong tháng 2.",
     "link": "https://vnexpress.net/oto-xe-may/v-car/doanh-so/10-oto-ban-it-nhat-thi-truong-viet-nam-thang-2-4858749.html",
@@ -425,33 +452,6 @@
     ]
   },
   {
-    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
-    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
-    "answers": [
-      {
-        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
-        "correct": true
-      },
-      {
-        "text": "Không, chỉ là một bệnh nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có nhưng không gây biến chứng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
     "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
     "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
@@ -474,6 +474,33 @@
       },
       {
         "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
+    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
+    "answers": [
+      {
+        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
+        "correct": true
+      },
+      {
+        "text": "Không, chỉ là một bệnh nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có nhưng không gây biến chứng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
