--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hoa hậu H'hen Niê hóa trang thành ly cà phê Ban Mê",
+    "content": "Hoa hậu H'hen Niê đã hóa trang thành ly cà phê Ban Mê trong lễ hội đường phố thuộc Lễ hội cà phê Buôn Ma Thuột lần thứ 9 vào ngày 10-3-2025. Sự kiện thu hút đông đảo du khách và người dân, tạo không khí vui tươi và sôi động với nhiều hoạt động văn hóa đặc sắc. H'hen Niê, với vai trò đại sứ truyền thông, đã góp phần quảng bá hình ảnh cà phê Buôn Ma Thuột và văn hóa Đắk Lắk đến bạn bè quốc tế.",
+    "link": "https://tuoitre.vn/hoa-hau-h-hen-nie-hoa-trang-thanh-ly-ca-phe-ban-me-20250310152843206.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "H'hen Niê hóa trang thành gì tại lễ hội cà phê Buôn Ma Thuột?",
+    "answers": [
+      {
+        "text": "ly cà phê Ban Mê",
+        "correct": true
+      },
+      {
+        "text": "cà phê sữa đá",
+        "correct": false
+      },
+      {
+        "text": "bánh mì",
+        "correct": false
+      },
+      {
+        "text": "trà sữa",
+        "correct": false
+      },
+      {
+        "text": "món ăn truyền thống",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Làm méo miệng, sái quai hàm khách, 7 người ở thẩm mỹ viện Gangwhoo bị khởi tố",
     "content": "Ngày 10-3, Công an tỉnh Thanh Hóa đã khởi tố 7 người liên quan đến vụ việc tại thẩm mỹ viện Gangwhoo, nơi khách hàng đã bị làm méo miệng và sái quai hàm do các dịch vụ không đảm bảo. Những người này, bao gồm cả chủ thẩm mỹ viện, đã bị cáo buộc lừa dối khách hàng bằng cách thực hiện các thủ thuật thẩm mỹ mà không có giấy phép và chuyên môn. Cơ quan điều tra đang tiếp tục tìm kiếm nạn nhân để giải quyết vụ việc.",
     "link": "https://tuoitre.vn/lam-meo-mieng-sai-quai-ham-khach-7-nguoi-o-tham-my-vien-gangwhoo-bi-khoi-to-20250310164407807.htm",
@@ -572,33 +603,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -621,6 +625,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1391,32 +1422,28 @@
     ]
   },
   {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
     "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
     "answers": [
       {
-        "text": "3,99%/năm",
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
         "correct": true
       },
       {
-        "text": "4,5%/năm",
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
         "correct": false
       },
       {
-        "text": "5,0%/năm",
+        "text": "Vì họ không thích đi xe.",
         "correct": false
       },
       {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -1449,28 +1476,32 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
     "answers": [
       {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "text": "3,99%/năm",
         "correct": true
       },
       {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "text": "4,5%/năm",
         "correct": false
       },
       {
-        "text": "Vì họ không thích đi xe.",
+        "text": "5,0%/năm",
         "correct": false
       },
       {
-        "text": "Vì họ yếu sinh lý.",
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
         "correct": false
       }
     ]
