--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Các Chinatown ở Mỹ lao đao vì Mỹ áp thuế bổ sung 10% hàng nhập khẩu Trung Quốc",
+    "content": "Các Chinatown ở Mỹ đang gặp khó khăn lớn do việc Mỹ áp thuế bổ sung 10% lên hàng nhập khẩu từ Trung Quốc. Điều này dẫn đến nguy cơ ế hàng và thậm chí có thể phải đóng cửa các cửa hàng, đặc biệt là khi giá cả hàng hóa nhập khẩu tăng cao. Cộng đồng người Hoa lo ngại rằng sự tăng giá này không chỉ ảnh hưởng đến việc kinh doanh mà còn có thể mai một văn hóa truyền thống của họ, khi thu nhập của người dân trong khu vực đã thấp hơn nhiều so với mức trung bình của thành phố.",
+    "link": "https://tuoitre.vn/cac-chinatown-o-my-lao-dao-vi-my-ap-thue-bo-sung-10-hang-nhap-khau-trung-quoc-20250310173004409.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Các Chinatown ở Mỹ đang gặp khó khăn gì?",
+    "answers": [
+      {
+        "text": "Do thuế nhập khẩu hàng hóa tăng cao từ Trung Quốc.",
+        "correct": true
+      },
+      {
+        "text": "Do giá cả hàng hóa giảm mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Do nhu cầu tiêu dùng tăng cao.",
+        "correct": false
+      },
+      {
+        "text": "Do người dân chuyển sang mua sắm trực tuyến.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cao thủ Belarus chốt đấu vật với Hiếu 'khổng lồ'",
+    "content": "Zakhar Dzmitrychenka, một đô vật đến từ Belarus, đã xác nhận sẽ thi đấu với cựu đô vật Việt Nam Hà Văn Hiếu (biệt danh Hiếu 'khổng lồ') trong thời gian tới, mặc dù có sự chênh lệch về hạng cân. Dự kiến, trận đấu sẽ diễn ra vào ngày 31/3 tại lễ hội vật làng Tiêu Sơn, Bắc Ninh. Zakhar, người đã gây ấn tượng qua các trận đấu tại miền Bắc Việt Nam, sẽ đối đầu với Hiếu, một huyền thoại của làng vật Việt Nam, đã giải nghệ nhưng vẫn giữ kỷ lục vô địch quốc gia.",
+    "link": "https://vnexpress.net/cao-thu-belarus-chot-dau-vat-voi-hieu-khong-lo-4859290.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Trận đấu giữa Zakhar Dzmitrychenka và Hà Văn Hiếu sẽ diễn ra khi nào?",
+    "answers": [
+      {
+        "text": "Ngày 31/3",
+        "correct": true
+      },
+      {
+        "text": "Ngày 1/4",
+        "correct": false
+      },
+      {
+        "text": "Ngày 10/3",
+        "correct": false
+      },
+      {
+        "text": "Ngày 15/3",
+        "correct": false
+      },
+      {
+        "text": "Ngày 25/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhật Bản mở phiên đấu giá gạo dự trữ khẩn cấp đầu tiên",
     "content": "Nhật Bản đã mở phiên đấu giá gạo dự trữ khẩn cấp đầu tiên nhằm giảm giá gạo đang tăng cao. Dự kiến, 150.000 tấn gạo sẽ được đấu giá và có mặt trên thị trường vào cuối tháng 3. Bộ Nông nghiệp Nhật Bản cũng lên kế hoạch đấu giá thêm 60.000 tấn nếu cần thiết. Nguyên nhân của tình trạng khan hiếm gạo bao gồm nhu cầu tăng cao từ du lịch và biến đổi khí hậu, khiến giá gạo tăng gần 90% trong năm qua.",
     "link": "https://tuoitre.vn/nhat-ban-mo-phien-dau-gia-gao-du-tru-khan-cap-dau-tien-2025031017185495.htm",
@@ -657,33 +715,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -706,6 +737,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1449,6 +1507,37 @@
     ]
   },
   {
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "answers": [
+      {
+        "text": "3,99%/năm",
+        "correct": true
+      },
+      {
+        "text": "4,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "5,0%/năm",
+        "correct": false
+      },
+      {
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
     "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
     "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
@@ -1498,37 +1587,6 @@
       },
       {
         "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
-    "answers": [
-      {
-        "text": "3,99%/năm",
-        "correct": true
-      },
-      {
-        "text": "4,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "5,0%/năm",
-        "correct": false
-      },
-      {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
         "correct": false
       }
     ]
@@ -2377,33 +2435,6 @@
     ]
   },
   {
-    "title": "Lợi ích sức khỏe của đậu bắp",
-    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng làm đẹp da.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích sức khỏe nào.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tốt cho việc giảm cân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
     "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
     "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
@@ -2426,6 +2457,33 @@
       },
       {
         "text": "Do áp lực công việc của cả hai vợ chồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích sức khỏe của đậu bắp",
+    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng làm đẹp da.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích sức khỏe nào.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tốt cho việc giảm cân.",
         "correct": false
       }
     ]
@@ -2694,37 +2752,6 @@
     ]
   },
   {
-    "title": "Bé chậm tăng cân do lỗ thông liên nhĩ",
-    "content": "Minh Anh, 2 tuổi, bị thông liên nhĩ lớn dẫn đến chậm tăng cân và thường xuyên viêm đường hô hấp. Sau khi theo dõi và điều trị dinh dưỡng, bé đã đủ điều kiện để can thiệp đóng lỗ thông. Bác sĩ thực hiện thủ thuật xâm lấn tối thiểu để bít lỗ thông liên nhĩ mà không gây tổn thương. Sau can thiệp, sức khỏe của Minh Anh cải thiện rõ rệt, không còn viêm hô hấp và tăng cân tốt hơn.",
-    "link": "https://vnexpress.net/be-cham-tang-can-do-lo-thong-lien-nhi-4858895.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé Minh Anh bị bệnh gì dẫn đến chậm tăng cân?",
-    "answers": [
-      {
-        "text": "Thông liên nhĩ",
-        "correct": true
-      },
-      {
-        "text": "Hẹp van tim",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tim bẩm sinh khác",
-        "correct": false
-      },
-      {
-        "text": "Suy dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "BMW tung ưu đãi mới cho sedan 3 series",
     "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
     "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
@@ -2751,6 +2778,37 @@
       },
       {
         "text": "Tặng vé xem phim cho khách hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé chậm tăng cân do lỗ thông liên nhĩ",
+    "content": "Minh Anh, 2 tuổi, bị thông liên nhĩ lớn dẫn đến chậm tăng cân và thường xuyên viêm đường hô hấp. Sau khi theo dõi và điều trị dinh dưỡng, bé đã đủ điều kiện để can thiệp đóng lỗ thông. Bác sĩ thực hiện thủ thuật xâm lấn tối thiểu để bít lỗ thông liên nhĩ mà không gây tổn thương. Sau can thiệp, sức khỏe của Minh Anh cải thiện rõ rệt, không còn viêm hô hấp và tăng cân tốt hơn.",
+    "link": "https://vnexpress.net/be-cham-tang-can-do-lo-thong-lien-nhi-4858895.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé Minh Anh bị bệnh gì dẫn đến chậm tăng cân?",
+    "answers": [
+      {
+        "text": "Thông liên nhĩ",
+        "correct": true
+      },
+      {
+        "text": "Hẹp van tim",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim bẩm sinh khác",
+        "correct": false
+      },
+      {
+        "text": "Suy dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
         "correct": false
       }
     ]
