Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Tăm xỉa răng cắm sâu vào gan cụ ông",
+    "content": "Một cụ ông 77 tuổi ở Hải Dương đã phải phẫu thuật cắt thùy gan trái do một chiếc tăm xỉa răng dài khoảng 5 cm cắm sâu vào gan, gây nhiễm trùng và áp xe. Cụ ông có thói quen ngậm tăm sau khi ăn và không hay biết rằng mình đã nuốt phải tăm. Bác sĩ cảnh báo rằng việc ngậm tăm có thể dẫn đến những biến chứng nghiêm trọng nếu không được phát hiện kịp thời.",
+    "link": "https://vnexpress.net/tam-xia-rang-cam-sau-vao-gan-cu-ong-4859264.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao cụ ông 77 tuổi phải phẫu thuật cắt gan?",
+    "answers": [
+      {
+        "text": "Chiếc tăm xỉa răng cắm sâu vào gan.",
+        "correct": true
+      },
+      {
+        "text": "Do bệnh tim thiếu máu cục bộ.",
+        "correct": false
+      },
+      {
+        "text": "Vì bị viêm phổi nặng.",
+        "correct": false
+      },
+      {
+        "text": "Do đái tháo đường không được điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thủ phạm khiến phái nữ bốc hỏa",
+    "content": "Bài viết đề cập đến nguyên nhân khiến phụ nữ bốc hỏa, bao gồm sự thay đổi nội tiết tố trong các giai đoạn như mang thai, kỳ kinh nguyệt và tiền mãn kinh. Triệu chứng bốc hỏa thường là cảm giác nóng bức, đổ mồ hôi và đỏ bừng da. Ngoài ra, một số bệnh lý và yếu tố khác như thời tiết nóng hay chế độ ăn uống cũng có thể làm gia tăng tình trạng này. Bài viết cũng đưa ra những biện pháp giúp phụ nữ giảm cơn bốc hỏa hiệu quả.",
+    "link": "https://vnexpress.net/thu-pham-khien-phai-nu-boc-hoa-4859026.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Nguyên nhân nào khiến phụ nữ bốc hỏa?",
+    "answers": [
+      {
+        "text": "Sự thay đổi nội tiết tố trong cơ thể",
+        "correct": true
+      },
+      {
+        "text": "Thời tiết lạnh",
+        "correct": false
+      },
+      {
+        "text": "Thiếu vitamin D",
+        "correct": false
+      },
+      {
+        "text": "Mất ngủ",
+        "correct": false
+      },
+      {
+        "text": "Tăng cân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các Chinatown ở Mỹ lao đao vì Mỹ áp thuế bổ sung 10% hàng nhập khẩu Trung Quốc",
     "content": "Các Chinatown ở Mỹ đang gặp khó khăn lớn do việc Mỹ áp thuế bổ sung 10% lên hàng nhập khẩu từ Trung Quốc. Điều này dẫn đến nguy cơ ế hàng và thậm chí có thể phải đóng cửa các cửa hàng, đặc biệt là khi giá cả hàng hóa nhập khẩu tăng cao. Cộng đồng người Hoa lo ngại rằng sự tăng giá này không chỉ ảnh hưởng đến việc kinh doanh mà còn có thể mai một văn hóa truyền thống của họ, khi thu nhập của người dân trong khu vực đã thấp hơn nhiều so với mức trung bình của thành phố.",
     "link": "https://tuoitre.vn/cac-chinatown-o-my-lao-dao-vi-my-ap-thue-bo-sung-10-hang-nhap-khau-trung-quoc-20250310173004409.htm",
