Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,64 @@
     ]
   },
   {
+    "title": "Uống gì giảm nguy cơ sỏi thận?",
+    "content": "Để giảm nguy cơ sỏi thận, việc uống đủ nước, khoảng hai lít mỗi ngày, là rất quan trọng. Ngoài ra, việc tiêu thụ cà phê vừa phải, trà thảo mộc và các loại nước uống không chứa calo cũng giúp giảm nguy cơ sỏi thận. Cà phê có thể giảm nguy cơ đến 40% nếu tăng lượng tiêu thụ, trong khi trà xanh và sinh tố ít đường cũng có lợi cho sức khỏe thận. Tuy nhiên, cần lưu ý lượng đường và các chất trong nước ép trái cây để tránh tác động xấu đến sức khỏe.",
+    "link": "https://vnexpress.net/uong-gi-giam-nguy-co-soi-than-4859161.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Uống gì để giảm nguy cơ sỏi thận?",
+    "answers": [
+      {
+        "text": "Uống đủ nước lọc mỗi ngày",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều nước ngọt có ga",
+        "correct": false
+      },
+      {
+        "text": "Uống bia mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Uống rượu vang",
+        "correct": false
+      },
+      {
+        "text": "Uống nước trái cây có đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao gọi là bệnh ho gà?",
+    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
+    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao ho gà lại có tên gọi như vậy?",
+    "answers": [
+      {
+        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh này do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Ho gà là tên một loại thuốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tổng thống Trump muốn đàm phán với Iran",
     "content": "Tổng thống Donald Trump đã bày tỏ mong muốn đạt được một thỏa thuận với Iran về chương trình hạt nhân trong một cuộc phỏng vấn với Fox News. Ông cho biết có hai cách để giải quyết vấn đề này: một là quân sự và hai là thông qua đàm phán, và ông ưu tiên lựa chọn đàm phán. Tuy nhiên, lãnh tụ tối cao Iran, Ayatollah Ali Khamenei, đã từ chối đề nghị này, cho rằng Mỹ không có ý định giải quyết vấn đề một cách chân thành. Tình hình hiện tại cho thấy sự căng thẳng vẫn tiếp diễn giữa hai quốc gia.",
     "link": "https://dantri.com.vn/the-gioi/tong-thong-trump-muon-dam-phan-voi-iran-20250310053143186.htm",
@@ -1221,33 +1279,6 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
-    "answers": [
-      {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
     "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
     "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
@@ -1297,6 +1328,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "answers": [
+      {
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -2040,33 +2098,6 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -2093,6 +2124,33 @@
       },
       {
         "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -3490,6 +3548,33 @@
     ]
   },
   {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -3516,33 +3601,6 @@
       },
       {
         "text": "Một chương trình học mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -4560,33 +4618,6 @@
     ]
   },
   {
-    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
-    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
-    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
-        "correct": true
-      },
-      {
-        "text": "Họ sản xuất xe điện thuần.",
-        "correct": false
-      },
-      {
-        "text": "Họ có nhiều mẫu xe thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ bán xe chạy bằng xăng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Genesis GV70 mới giá từ 48.000 USD",
     "content": "Genesis GV70 2025 đã được giới thiệu tại thị trường Mỹ với giá khởi điểm từ 48.000 USD. Mẫu SUV này có thiết kế ngoại thất được nâng cấp với lưới tản nhiệt táo bạo hơn và màn hình OLED 27 inch mới bên trong. Xe có hai tùy chọn động cơ: máy xăng 2.5 tăng áp 300 mã lực và động cơ V6 3.5 tăng áp 375 mã lực. Các tính năng an toàn và hỗ trợ lái cũng được cải tiến với nhiều công nghệ hiện đại.",
     "link": "https://vnexpress.net/genesis-gv70-moi-gia-tu-48-000-usd-4858748.html",
@@ -4613,6 +4644,33 @@
       },
       {
         "text": "60.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
+    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
+    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
+        "correct": true
+      },
+      {
+        "text": "Họ sản xuất xe điện thuần.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều mẫu xe thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ bán xe chạy bằng xăng.",
         "correct": false
       }
     ]
@@ -5173,64 +5231,6 @@
       },
       {
         "text": "Singapore",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vay lãi mua nhà chung cư, người trẻ quay cuồng trả nợ",
-    "content": "Nhiều gia đình trẻ ở Hà Nội đang phải vay ngân hàng để mua căn hộ chung cư, trong bối cảnh lãi suất vay tăng cao, gây áp lực lớn lên khả năng trả nợ. Các chuyên gia kinh tế cảnh báo rằng giá nhà đang vượt quá khả năng chi trả của người dân, và kêu gọi chính phủ cần có chính sách hỗ trợ để tạo điều kiện cho người trẻ dưới 35 tuổi tiếp cận vốn vay với lãi suất thấp và kỳ hạn dài. Việc lãi suất thả nổi gây ra nhiều khó khăn cho người vay, đặc biệt là trong thời điểm thu nhập không ổn định.",
-    "link": "https://tuoitre.vn/vay-lai-mua-nha-chung-cu-nguoi-tre-quay-cuong-tra-no-20250309161221585.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao người trẻ ở Hà Nội quay cuồng trong việc trả nợ vay mua nhà chung cư?",
-    "answers": [
-      {
-        "text": "Vì lãi suất vay ngân hàng tăng cao và không ổn định.",
-        "correct": true
-      },
-      {
-        "text": "Vì giá căn hộ chung cư giảm mạnh.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không có kế hoạch tài chính rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Vì thu nhập của họ tăng nhanh chóng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ông Musk nêu cách sẽ khiến chiến sự Nga - Ukraine chấm dứt ngay lập tức",
-    "content": "Tỷ phú Elon Musk đã đề xuất rằng Mỹ nên áp đặt lệnh trừng phạt đối với 10 tài phiệt giàu nhất Ukraine để chấm dứt ngay lập tức cuộc chiến giữa Nga và Ukraine. Ông nhấn mạnh rằng việc trừng phạt những cá nhân này, đặc biệt là những người sở hữu tài sản lớn ở nước ngoài, sẽ giúp giải quyết xung đột kéo dài hơn 3 năm qua. Musk không cung cấp danh sách cụ thể về các tài phiệt nhưng nhấn mạnh tầm quan trọng của việc này trong việc chính trị hóa cuộc xung đột.",
-    "link": "https://dantri.com.vn/the-gioi/ong-musk-neu-cach-se-khien-chien-su-nga-ukraine-cham-dut-ngay-lap-tuc-20250309184842769.htm",
-    "cat": "the-gioi",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Ông Musk đề xuất gì để chấm dứt chiến sự Nga - Ukraine?",
-    "answers": [
-      {
-        "text": "Áp đặt lệnh trừng phạt đối với 10 tài phiệt Ukraine",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường viện trợ quân sự cho Ukraine",
-        "correct": false
-      },
-      {
-        "text": "Thương lượng một thỏa thuận hòa bình mới",
-        "correct": false
-      },
-      {
-        "text": "Rút quân khỏi Ukraine",
-        "correct": false
-      },
-      {
-        "text": "Đàm phán trực tiếp với Nga",
         "correct": false
       }
     ]
